tests/errors/semantic/blocking/REMOVE_SET_INCOMPATIBLE_TYPES_2.py
# pylint: disable=missing-function-docstring, missing-module-docstring

a = {3j, 9j, 1j}
b = 3.6
a.remove(b)
